// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Change props values 1`] = `
<div
  className="input-wrapper"
>
  <label>
    Label
  </label>
  <input
    autoFocus={true}
    placeholder="enter your email"
    required={true}
    type="emial"
    value="example@gmail.com"
  />
</div>
`;

exports[`Change props values 2`] = `
<div
  className="input-wrapper"
>
  <label>
    Label
  </label>
  <input
    autoFocus={true}
    placeholder="Email"
    required={true}
    type="emial"
    value="example@gmail.com"
  />
</div>
`;
